# so_bank

./: CMakeLists.txt  funciones.c  funciones.h  main.c  makefile
models/: banco.h  cliente.h  cuenta.h  iban.h  swift.h
tools/: interfaz.c  interfaz.h  reader.c  reader.h  servicioBanco.c  servicioBanco.h
